plugins {
    // Apply the Kotlin JVM plugin to add support for Kotlin on the JVM.
    id 'org.jetbrains.kotlin.jvm' version '1.3.31'

    // Apply the application plugin to add support for building a CLI application.
    id 'application'
}

group 'oksiblacks.self.learn'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {

    compile "org.jetbrains.kotlin:kotlin-stdlib:1.3.31"

    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    testCompile group: 'junit', name: 'junit', version: '4.12'
}


tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}


compileKotlin {
    kotlinOptions.jvmTarget = "12"
}
compileTestKotlin {
    kotlinOptions.jvmTarget = "12"
}


test {
    jvmArgs(['--enable-preview'])
}
subprojects {
    dependencies {
        rootProject
    }
}
allprojects {
    repositories {
        jcenter()
    }
}